--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<title>Landed by HTML5 UP</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<script src="https://kit.fontawesome.com/d869c2b369.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="assets/css/customize.css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
@@ -43,7 +45,6 @@
 						</ul>
 					</li>
 					<li><a href="elements.html">Elements</a></li>
-					<li><a href="#" class="button primary">Sign Up</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -62,12 +63,12 @@
 				</header>
 				<span class="image"><img src="images/headshot.png" alt="" /></span>
 			</div>
-			<a href="#one" class="goto-next scrolly">Next</a>
+			<a href="#why-me" class="goto-next scrolly">Next</a>
 		</section>
 
 		<!-- Why Me -->
-		<section id="one" class="spotlight style1 bottom">
-			<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+		<section id="why-me" class="spotlight style1 bottom">
+			<span class="image fit main"><img src="images/pic02.jpeg" alt="" /></span>
 			<div class="content">
 				<div class="container">
 					<div class="row">
@@ -97,65 +98,68 @@
 					</div>
 				</div>
 			</div>
-			<a href="#two" class="goto-next scrolly">Next</a>
+			<a href="#arrow-investment" class="goto-next scrolly">Next</a>
 		</section>
 
 		<!-- Arrow Investment -->
-		<section id="two" class="spotlight style2 right">
+		<section id="arrow-investment" class="spotlight style2 right">
 			<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 			<div class="content">
 				<header>
 					<h2>Arrow Investment</h2>
-					<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+					<p>JavaScript, Python, React, Redux, Flask, SQLAlchemy, PosgreSQL, HTML5, CSS3, Render</p>
 				</header>
-				<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-					mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing
-					lorem.</p>
+				<p>Welcome to Arrow Investment where you can follow market news, trade stocks and manage your trading portfolio
+					all in one place! This is a full-stack Robinhood clone where I constantly adding more features to improve
+					user experience and help people make a better financial decision.</p>
 				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
+					<li><a href="https://arrowinvestment.onrender.com/" class="button">Live Site</a></li>
+					<li><a href="https://github.com/Yue-Hao14/ArrowInvestment-Capstone-Project" class="button">Github</a></li>
 				</ul>
 			</div>
-			<a href="#three" class="goto-next scrolly">Next</a>
+			<a href="#divvyup" class="goto-next scrolly">Next</a>
 		</section>
 
 		<!-- DivvyUp -->
-		<section id="three" class="spotlight style3 left">
-			<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+		<section id="divvyup" class="spotlight style3 left">
+			<span class="main divvyup-gif"><img class="fit" src="images/divvyup.gif" alt="" /></span>
 			<div class="content">
 				<header>
 					<h2>DivvyUp</h2>
-					<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+					<p>JavaScript, Python, React, Redux, Flask, SQLAlchemy, PosgreSQL, HTML5, CSS3, Render</p>
 				</header>
-				<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-					mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing
-					lorem.</p>
+				<p>Are you tired of dealing with complicated math and awkward money conversations when it comes to splitting
+					expenses with friends or roommates? Look no further! DivvyUp is here to revolutionize the way you manage
+					shared expenses. DivvyUp is a powerful and user-friendly expense-tracking app that is designed to simplify
+					the process of splitting bills and expenses.</p>
 				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
+					<li><a href="https://divvyup.onrender.com/" class="button">Live Site</a></li>
+					<li><a href="https://github.com/Yue-Hao14/DivvyUp-Group-Project" class="button">Github</a></li>
 				</ul>
 			</div>
-			<a href="#four" class="goto-next scrolly">Next</a>
+			<a href="#homesweethomeaway" class="goto-next scrolly">Next</a>
 		</section>
 
 		<!-- HomeSweetHomeAaway -->
-		<section id="two" class="spotlight style2 right">
+		<section id="homesweethomeaway" class="spotlight style2 right">
 			<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 			<div class="content">
 				<header>
 					<h2>HomeSweetHomeAaway</h2>
-					<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+					<p>JavaScript, Python, React, Redux, Node.js, Express, Sequelize, PosgreSQL, AWS, HTML5, CSS3, Render</p>
 				</header>
-				<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-					mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing
-					lorem.</p>
+				<p>This is an AirBnB clone full-stack website where I bring my top 2 passions together: travel and programming.
+					You can find unique and authentic accommodation options all over the world here!</p>
 				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
+					<li><a href="https://homesweethomeaway.onrender.com/" class="button">Live Site</a></li>
+					<li><a href="https://github.com/Yue-Hao14/HomeSweetHomeAway-Project" class="button">Github</a></li>
 				</ul>
 			</div>
-			<a href="#three" class="goto-next scrolly">Next</a>
+			<a href="#skills" class="goto-next scrolly">Next</a>
 		</section>
 
 		<!-- Skills -->
-		<section id="four" class="wrapper style1 special fade-up">
+		<section id="skills" class="wrapper style1 special fade-up">
 			<div class="container">
 				<header class="major">
 					<h2>Skills</h2>
@@ -234,11 +238,6 @@
 						</section>
 					</div>
 				</div>
-				<footer class="major">
-					<ul class="actions special">
-						<li><a href="#" class="button">Magna sed feugiat</a></li>
-					</ul>
-				</footer>
 			</div>
 		</section>
 
@@ -247,9 +246,17 @@
 			<div class="container">
 				<header>
 					<h2>Contact Me</h2>
-					<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+					<div class="contact-info">
+						<h3><i class="fa-solid fa-phone"></i>518.867.6409</h3>
+						<h3><i class="fa-solid fa-envelope"></i>yhao.dev@gmail.com</h3>
+					</div>
+					<ul class="contact-links action">
+						<a href="https://www.linkedin.com/in/yue-hao/" class="button primary"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+						<a href="https://github.com/Yue-Hao14" class="button primary"><i class="fa-brands fa-github"></i>GitHub</a>
+						<a href="https://wellfound.com/u/yue-hao" class="button primary"><i class="fa-brands fa-angellist"></i>Angelist</a>
+					</ul>
 				</header>
-				<form method="post" action="#">
+				<!-- <form method="post" action="#">
 					<div class="row gtr-uniform gtr-50">
 						<div class="col-6 col-12-xsmall">
 							<input type="text" name="name" id="name" value="" placeholder="Name" />
@@ -267,20 +274,20 @@
 							</ul>
 						</div>
 					</div>
-				</form>
+				</form> -->
 			</div>
 		</section>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<ul class="icons">
+			<!-- <ul class="icons">
 				<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 				<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 				<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-			</ul>
+			</ul> -->
 			<ul class="copyright">
 				<li>&copy; Untitled. All rights reserved.</li>
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
