add image for arrow and home projects but still need css

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 		<!-- Arrow Investment -->
 		<section id="arrow-investment" class="spotlight style2 right">
-			<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+			<span class="image fit main arrow-gif"><img src="images/Arrow Landing.png" alt="" /></span>
 			<div class="content">
 				<header>
 					<h2>Arrow Investment</h2>
@@ -142,7 +142,7 @@
 
 		<!-- HomeSweetHomeAaway -->
 		<section id="homesweethomeaway" class="spotlight style2 right">
-			<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+			<span class="image fit main"><img src="images/Home Dashboard.png" alt="" /></span>
 			<div class="content">
 				<header>
 					<h2>HomeSweetHomeAaway</h2>
