--- a/index.html
+++ b/index.html
@@ -24,28 +24,14 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1 id="logo"><a href="index.html">Landed</a></h1>
+			<h1 id="logo"><a href="index.html">Yue Hao</a></h1>
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li>
-						<a href="#">Layouts</a>
-						<ul>
-							<li><a href="left-sidebar.html">Left Sidebar</a></li>
-							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">No Sidebar</a></li>
-							<li>
-								<a href="#">Submenu</a>
-								<ul>
-									<li><a href="#">Option 1</a></li>
-									<li><a href="#">Option 2</a></li>
-									<li><a href="#">Option 3</a></li>
-									<li><a href="#">Option 4</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="#why-me">Why Me</a></li>
+					<li><a href="#arrow-investment">Projects</a></li>
+					<li><a href="#skills">Skills</a></li>
+					<li><a href="#contact-me">Contacts</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -270,7 +256,7 @@
 		</section>
 
 		<!-- Form -->
-		<section id="five" class="wrapper style2 special fade">
+		<section id="contact-me" class="wrapper style2 special fade">
 			<div class="container">
 				<header>
 					<h2>Contact Me</h2>
