--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<p>Full-stack Software Engineer based in Greater New York area.<br />
 						Passionate about solving problems and using technology to make people's life better. </p>
 					<ul class="actions">
-						<li><a href="#" class="button primary">Resume</a></li>
+						<li><a href="assets/Yue Hao SWE Resume.pdf" class="button primary">Resume</a></li>
 						<li><a href="https://www.linkedin.com/in/yue-hao/" class="button primary">LinkedIn</a></li>
 					</ul>
 				</header>
