--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Landed by HTML5 UP</title>
+	<title>Yue Hao</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<script src="https://kit.fontawesome.com/d869c2b369.js" crossorigin="anonymous"></script>
