updated bio language a bit

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<header>
 					<h2>Yue Hao</h2>
 					<p>Full-stack Software Engineer based in Greater New York area.<br />
-						Passionate about solving problems and using technology to make people's life better. </p>
+						Passionate about solving problems and building products to improve people's lives. </p>
 					<ul class="actions">
 						<li><a href="assets/Yue Hao SWE Resume.pdf" class="button primary">Resume</a></li>
 						<li><a href="https://www.linkedin.com/in/yue-hao/" class="button primary">LinkedIn</a></li>
