changed all a tag to open a new tab when clicked

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 					<p>Full-stack Software Engineer based in Greater New York area.<br />
 						Passionate about solving problems and building products to improve people's lives. </p>
 					<ul class="actions">
-						<li><a href="assets/Yue Hao SWE Resume.pdf" class="button primary">Resume</a></li>
-						<li><a href="https://www.linkedin.com/in/yue-hao/" class="button primary">LinkedIn</a></li>
+						<li><a href="assets/Yue Hao SWE Resume.pdf" class="button primary" target="_blank">Resume</a></li>
+						<li><a href="https://www.linkedin.com/in/yue-hao/" class="button primary" target="_blank">LinkedIn</a></li>
 					</ul>
 				</header>
 				<span class="image"><img src="images/headshot.png" alt="" /></span>
@@ -99,8 +99,8 @@
 					all in one place! This is a full-stack Robinhood clone where I constantly adding more features to improve
 					user experience and help people make a better financial decision.</p>
 				<ul class="actions">
-					<li><a href="https://arrowinvestment.onrender.com/" class="button">Live Site</a></li>
-					<li><a href="https://github.com/Yue-Hao14/ArrowInvestment-Capstone-Project" class="button">Github</a></li>
+					<li><a href="https://arrowinvestment.onrender.com/" class="button" target="_blank">Live Site</a></li>
+					<li><a href="https://github.com/Yue-Hao14/ArrowInvestment-Capstone-Project" class="button" target="_blank">Github</a></li>
 				</ul>
 			</div>
 			<a href="#divvyup" class="goto-next scrolly">Next</a>
@@ -119,8 +119,8 @@
 					shared expenses. DivvyUp is a powerful and user-friendly expense-tracking app that is designed to simplify
 					the process of splitting bills and expenses.</p>
 				<ul class="actions">
-					<li><a href="https://divvyup.onrender.com/" class="button">Live Site</a></li>
-					<li><a href="https://github.com/Yue-Hao14/DivvyUp-Group-Project" class="button">Github</a></li>
+					<li><a href="https://divvyup.onrender.com/" class="button" target="_blank">Live Site</a></li>
+					<li><a href="https://github.com/Yue-Hao14/DivvyUp-Group-Project" class="button" target="_blank">Github</a></li>
 				</ul>
 			</div>
 			<a href="#homesweethomeaway" class="goto-next scrolly">Next</a>
@@ -137,8 +137,8 @@
 				<p>This is an AirBnB clone full-stack website where I bring my top 2 passions together: travel and programming.
 					You can find unique and authentic accommodation options all over the world here!</p>
 				<ul class="actions">
-					<li><a href="https://homesweethomeaway.onrender.com/" class="button">Live Site</a></li>
-					<li><a href="https://github.com/Yue-Hao14/HomeSweetHomeAway-Project" class="button">Github</a></li>
+					<li><a href="https://homesweethomeaway.onrender.com/" class="button" target="_blank">Live Site</a></li>
+					<li><a href="https://github.com/Yue-Hao14/HomeSweetHomeAway-Project" class="button" target="_blank">Github</a></li>
 				</ul>
 			</div>
 			<a href="#skills" class="goto-next scrolly">Next</a>
@@ -265,9 +265,9 @@
 						<h3><i class="fa-solid fa-envelope"></i>yhao.dev@gmail.com</h3>
 					</div>
 					<ul class="contact-links action">
-						<a href="https://www.linkedin.com/in/yue-hao/" class="button primary"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
-						<a href="https://github.com/Yue-Hao14" class="button primary"><i class="fa-brands fa-github"></i>GitHub</a>
-						<a href="https://wellfound.com/u/yue-hao" class="button primary"><i class="fa-brands fa-angellist"></i>Angelist</a>
+						<a href="https://www.linkedin.com/in/yue-hao/" class="button primary" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+						<a href="https://github.com/Yue-Hao14" class="button primary" target="_blank"><i class="fa-brands fa-github"></i>GitHub</a>
+						<a href="https://wellfound.com/u/yue-hao" class="button primary" target="_blank"><i class="fa-brands fa-angellist"></i>Angelist</a>
 					</ul>
 				</header>
 			</div>
@@ -277,7 +277,7 @@
 		<footer id="footer">
 			<ul class="copyright">
 				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 			</ul>
 		</footer>
 	</div>
